# PortfolioManager

./: .gitignore  BUGS_FOUND.md  Portfolio_Manager_PRD.md  README.md  pyproject.toml  test_debug.py  test_plan.md
docs/: PRD.md  README.md  api-reference.md  deployment.md  developer-guide.md  implementation-plan.md  troubleshooting.md  user-guide.md
portfolio-manager/: README.md  main.py  pyproject.toml
portfolio-manager/controllers/: __init__.py  news_controller.py  portfolio_controller.py  rebalancing_controller.py  stock_data_controller.py  watchlist_controller.py
portfolio-manager/models/: database.py  portfolio.py
portfolio-manager/portfolio_manager/: __init__.py
portfolio-manager/tests/: __init__.py  test_basic.py  test_sprint2.py
portfolio-manager/utils/: __init__.py  csv_parser.py  validators.py
portfolio-manager/web_server/: app.py
portfolio-manager/web_server/routes/: portfolios.py  rebalancing.py  stock_data.py  watchlists.py
portfolio-manager/web_server/static/css/: style.css
portfolio-manager/web_server/templates/: base.html
portfolio-manager/web_server/templates/portfolios/: detail.html  holding_form.html  list.html  new.html
portfolio-manager/web_server/templates/watchlists/: detail.html  item_form.html  list.html
scripts/: check_sofi_db.py  debug_news.py  debug_yfinance.py  debug_yfinance_content.py  demo.py  demo_sprint2.py  test_fixed_news.py  test_frontend_debug.html  test_news.py  test_news_api.py  test_news_ui.html
src/: main.py
src/controllers/: news_controller.py  portfolio_controller.py  rebalancing_controller.py  (+2 more)
(+26 files in other folders)
